@@ -46,7 +46,8 @@ int minikafs_cell_of_file(const char *file, char *cell, size_t length);
  * of the fileserver which holds /afs/cellname (assuming that the root.cell
  * volume from the cell is mounted there), converting the address to a host
  * name, and then asking libkrb5 to tell us to which realm the host belongs. */
-int minikafs_realm_of_cell(const char *cell, char *realm, size_t length);
+int minikafs_realm_of_cell(struct _pam_krb5_options *options,
+			   const char *cell, char *realm, size_t length);
 
 /* Create a new PAG. */
 int minikafs_setpag(void);
